MiniJava/MiniJava.java
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
import syntaxtree.*;
import java.io.*;

public class MiniJava implements MiniJavaConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException, FileNotFoundException {
    FileReader fileReader = new FileReader("ast_test1.java");

    MiniJava parser = new MiniJava(fileReader);
    ClassDeclList s = parser.Program();
    Visitor v1 = new AST_Visitor();
    s.accept(v1, 0);

  }

/* Program Syntax */
  static final public ClassDeclList Program() throws ParseException {
 ClassDeclList p = null; ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDeclaration();
                            p = new ClassDeclList(c, p);
    }
    jj_consume_token(0);
   {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public StatementList StatementList() throws ParseException {
 StatementList s1 = null; Statement s = null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case BREAK:
      case FOR:
      case NEW:
      case NULL:
      case TRUE:
      case FALSE:
      case CONTINUE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
      case BOOL_NEG:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      s = Statement();
                  s1 = new StatementList(s, s1);
    }
   {if (true) return s1;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
 Statement s;
    if (jj_2_1(4)) {
      s = Assignment();
      jj_consume_token(SEMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        s = IfBlock();
        break;
      case WHILE:
        s = WhileLoop();
        break;
      case FOR:
        s = For();
        break;
      case CONTINUE:
        s = Continue();
        jj_consume_token(SEMICOLON);
        break;
      case BREAK:
        s = Break();
        jj_consume_token(SEMICOLON);
        break;
      case NEW:
      case NULL:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
      case BOOL_NEG:
        s = ExpStatement();
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
   {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public void CommentIgnore() throws ParseException {
    jj_consume_token(COMMENT);
  }

  static final public Break Break() throws ParseException {
    jj_consume_token(BREAK);
     {if (true) return new Break();}
    throw new Error("Missing return statement in function");
  }

  static final public Continue Continue() throws ParseException {
    jj_consume_token(CONTINUE);
     {if (true) return new Continue();}
    throw new Error("Missing return statement in function");
  }

  static final public void ThrowStatement() throws ParseException {
    jj_consume_token(THROW);
            System.out.print("throw ");
    ExprVal2();
    jj_consume_token(SEMICOLON);
                                                                 System.out.print(";");
  }

  static final public If IfBlock() throws ParseException {
 Exp e, e1; StatementList s1; StatementList if_block; ElseIf elif_block = null; StatementList else_block = null;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = ExprVal2();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    if_block = StatementList();
    jj_consume_token(RBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(ELSEIF);
      jj_consume_token(LPAREN);
      e1 = ExprVal2();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      s1 = StatementList();
      jj_consume_token(RBRACE);
                                            elif_block = new ElseIf(elif_block, e1, s1);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      jj_consume_token(LBRACE);
      else_block = StatementList();
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
     {if (true) return new If(e, if_block, elif_block, else_block);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
 Token t, t1; Identifier type, name; VarDecl v; VarDeclList args = null; VarDeclList vars = null; StatementList statements = null; Exp returns = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      jj_consume_token(PUBLIC);
      break;
    case PRIVATE:
      jj_consume_token(PRIVATE);
      break;
    case PROTECTED:
      jj_consume_token(PROTECTED);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC:
      jj_consume_token(STATIC);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
             type = new Identifier("void");
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                                                               type = new Identifier(t.image);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    t1 = jj_consume_token(IDENTIFIER);
                     name = new Identifier(t1.image);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      v = TypeDeclaration();
                                                                                        args = new VarDeclList(v, args);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        v = TypeDeclaration();
                                                                                                                                                          args = new VarDeclList(v, args);
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      if (jj_2_2(4)) {
        ;
      } else {
        break label_5;
      }
      v = TypeDeclaration();
      jj_consume_token(SEMICOLON);
                                                         vars = new VarDeclList(v, vars);
    }
    statements = StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      jj_consume_token(RETURN);
      returns = ExprVal2();
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
      {if (true) return new MethodDecl(type, name, args, vars, statements, returns);}
    throw new Error("Missing return statement in function");
  }

  static final public While WhileLoop() throws ParseException {
 Exp e; StatementList s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = ExprVal2();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = StatementList();
    jj_consume_token(RBRACE);
     {if (true) return new While(e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public For For() throws ParseException {
 Token t, t1, t2; Exp e, e1; boolean is_increment = false; StatementList s;
    jj_consume_token(FOR);
    jj_consume_token(LPAREN);
    t = jj_consume_token(IDENTIFIER);
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGNMENT);
    e = ExprVal2();
    jj_consume_token(SEMICOLON);
    e1 = ExprVal2();
    jj_consume_token(SEMICOLON);
    t2 = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENT:
      jj_consume_token(INCREMENT);
                                                                                                                                                    is_increment = true;
      break;
    case DECREMENT:
      jj_consume_token(DECREMENT);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = StatementList();
    jj_consume_token(RBRACE);
     {if (true) return new For(new IdentifierExp(t.image), new IdentifierExp(t1.image), e, e1, new InPlaceOp(new IdentifierExp(t2.image), is_increment), s);}
    throw new Error("Missing return statement in function");
  }

  static final public void ForEach() throws ParseException {
 Token t;
    jj_consume_token(FOREACH);
               System.out.print("for ");
    jj_consume_token(LPAREN);
                                                    System.out.print("( ");
    t = jj_consume_token(IDENTIFIER);
                                                                                             System.out.print(t.image+" ");
    t = jj_consume_token(IDENTIFIER);
                                                                                                                                             System.out.print(t.image+" ");
    jj_consume_token(COLON);
                                                                                                                                                                                      System.out.print(": ");
    ExprVal2();
    jj_consume_token(RPAREN);
                                                                                                                                                                                                                                    System.out.print(") ");
    jj_consume_token(LBRACE);
                                                                                                                                                                                                                                                                       System.out.print("{");
    jj_consume_token(RBRACE);
                                                                                                                                                                                                                                                                                                          System.out.print("}");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
 Token t; VarDecl v; VarDeclList vl = null; MethodDecl m; MethodDeclList ml = null;
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      v = TypeDeclaration();
      jj_consume_token(SEMICOLON);
                                          vl = new VarDeclList(v, vl);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      m = MethodDeclaration();
                                ml = new MethodDeclList(m, ml);
    }
    jj_consume_token(RBRACE);
     {if (true) return new ClassDecl(new Identifier(t.image), vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement ExpStatement() throws ParseException {
 Exp e;
    e = ExprVal2();
   {if (true) return new ExpStatement(e);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl TypeDeclaration() throws ParseException {
 Token t1, t2; boolean is_array = false;
    t1 = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                        is_array = true;
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    t2 = jj_consume_token(IDENTIFIER);
   {if (true) return new VarDecl(new Identifier(t1.image), new Identifier(t2.image), is_array);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Assignment() throws ParseException {
 Token t1; Exp e1 = null; Exp e2;
    t1 = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      e1 = ExprVal2();
      jj_consume_token(RBRACKET);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(ASSIGNMENT);
    e2 = ExprVal2();
      if (e1 != null){
        {if (true) return new ArrayAssign(new Identifier(t1.image), e1, e2);}
      }
      {if (true) return new Assign(new Identifier(t1.image), e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExprVal2() throws ParseException {
 Exp e1; Exp if_true = null; Exp if_false = null;
    e1 = ExprVal3();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUESTIONMARK:
      jj_consume_token(QUESTIONMARK);
      if_true = ExprVal3();
      jj_consume_token(COLON);
      if_false = ExprVal2();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
      if (if_true != null){
        {if (true) return new Inline(e1, if_true, if_false);}
      }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExprVal3() throws ParseException {
 Exp e1; Exp e2 = null;
    e1 = ExprVal4();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      e2 = ExprVal3();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
      if (e2 != null){
        {if (true) return new Or(e1, e2);}
      }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExprVal4() throws ParseException {
 Exp e1; Exp e2 = null;
    e1 = ExprVal8();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      e2 = ExprVal4();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
      if (e2 != null){
        {if (true) return new And(e1, e2);}
      }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExprVal8() throws ParseException {
 Exp e1; boolean equals = false; boolean not_equals = false; Exp e2 = null;
    e1 = ExprVal9();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT_EQUALS:
    case EQUALS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        jj_consume_token(EQUALS);
                                equals = true;
        break;
      case NOT_EQUALS:
        jj_consume_token(NOT_EQUALS);
                                                                not_equals = true;
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = ExprVal8();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
      if (e2 != null){
        if (equals){
          {if (true) return new Equals(e1, e2);}
        }
        {if (true) return new NotEquals(e1, e2);}
      }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExprVal9() throws ParseException {
 Exp e1; Exp e2 = null; boolean lt = false; boolean le = false; boolean gt = false; boolean ge = false; boolean instf = false;
    e1 = ExprVal11();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSTANCEOF:
    case LE:
    case GE:
    case LT:
    case GT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        jj_consume_token(LT);
                             lt = true;
        break;
      case LE:
        jj_consume_token(LE);
                                                  le = true;
        break;
      case GT:
        jj_consume_token(GT);
                                                                     gt = true;
        break;
      case GE:
        jj_consume_token(GE);
                                                                                        ge = true;
        break;
      case INSTANCEOF:
        jj_consume_token(INSTANCEOF);
                                                                                                                   instf = true;
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = ExprVal9();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
      if (e2 != null){
        if (lt){
          {if (true) return new LessThan(e1, e2);}
        }
        if (le){
          {if (true) return new LessThanOrEqual(e1, e2);}
        }
        if (gt){
          {if (true) return new GreaterThan(e1, e2);}
        }
        if (ge){
          {if (true) return new GreaterThanOrEqual(e1, e2);}
        }
        {if (true) return new InstanceOf(e1, e2);}
      }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }
